--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,6 +9,7 @@ services:
     expose:
       - 80
   sut:
+    image: balena/jellyfish-sut
     build:
       context: .
       dockerfile: Dockerfile.ci
