--- a/docker-compose.tpl.yml
+++ b/docker-compose.tpl.yml
@@ -2,11 +2,10 @@ version: '2.1'
 
 services:
   api:
+    image: balena/jellyfish
     build:
       context: .
       dockerfile: ./apps/server/Dockerfile
-      args:
-        - NPM_TOKEN
     networks:
       - internal
     depends_on:
@@ -94,12 +93,12 @@ services:
       - 9229
     restart: always
   livechat:
+    image: balena/jellyfish-livechat
     build:
       args:
         - SENTRY_DSN_UI='0'
         - SERVER_HOST=http://api.ly.fish.local
         - SERVER_PORT=80
-        - NPM_TOKEN
       context: .
       dockerfile: ./apps/livechat/Dockerfile
     depends_on:
@@ -122,9 +121,8 @@ services:
     networks:
       - internal
   ui:
+    image: balena/jellyfish-ui
     build:
-      args:
-        - NPM_TOKEN
       context: .
       dockerfile: ./apps/ui/Dockerfile
     depends_on:
@@ -141,11 +139,10 @@ services:
       - internal
   {{#workers}}
   worker_{{idx}}:
+    image: balena/jellyfish-action-server
     build:
       context: .
       dockerfile: ./apps/action-server/Dockerfile
-      args:
-        - NPM_TOKEN
     depends_on:
       - postgres
       - redis
