Set images in compose configs
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.resinci.yml
+++ b/.resinci.yml
@@ -17,3 +17,7 @@ docker:
       dockerfile: apps/livechat/Dockerfile
       docker_repo: balena/jellyfish-livechat
       publish: true
+    - path: .
+      dockerfile: Dockerfile.ci
+      docker_repo: balena/jellyfish-sut
+      publish: false
