--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-livechat-configmap.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-livechat-configmap.tpl.yml
@@ -3,6 +3,9 @@ apiVersion: v1
 data:
   NGINX_PORT: "80"
   NODE_ENV: "production"
+  SENTRY_DSN_UI: "https://ff836b1e4abc4d0699bcaaf07ce4ea08@sentry.io/1366139"
+  SERVER_HOST: "https://api.ly.fish"
+  SERVER_PORT: "443"
 kind: ConfigMap
 metadata:
   name: jellyfish-livechat
