--- a/docker-compose.tpl.yml
+++ b/docker-compose.tpl.yml
@@ -107,7 +107,7 @@ services:
     networks:
       - internal
     environment:
-      - SENTRY_DSN_UI='0'
+      - SENTRY_DSN_UI=0
       - SERVER_HOST=http://api.ly.fish.local
       - SERVER_PORT=80
       - NGINX_PORT=80
