--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 FROM resinci/jellyfish-test:v1.4.10
 
 WORKDIR /usr/src/jellyfish
@@ -6,8 +8,8 @@ COPY . ./
 # Delete image archives created during CI build stage
 RUN rm -f balena-jellyfish-*.tar
 
-ARG NPM_TOKEN
-RUN echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc && \
+RUN --mount=type=secret,id=npmrc set -eux \
+	&& cp /run/secrets/npmrc ~/.npmrc && \
 	PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true make npm-install
 
 CMD /bin/bash -c "if [ "$CI" ]; then task test; else trap : TERM INT; sleep infinity; fi"
