--- a/apps/livechat/Dockerfile
+++ b/apps/livechat/Dockerfile
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 ###########################################################
 # Base
 ###########################################################
@@ -6,12 +8,13 @@ FROM balena/open-balena-base:v12.2.0 as base
 
 WORKDIR /usr/src/jellyfish/apps/livechat
 
-ARG NPM_TOKEN
-RUN echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+RUN --mount=type=secret,id=npmrc set -eux \
+	&& cp /run/secrets/npmrc ~/.npmrc
 COPY ./apps/livechat/package.json /usr/src/jellyfish/apps/livechat/package.json
 COPY ./apps/livechat/package-lock.json /usr/src/jellyfish/apps/livechat/package-lock.json
 RUN PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm ci
 
+# Do we need the root package.json?
 COPY ./package.json /usr/src/jellyfish/package.json
 COPY ./apps/livechat /usr/src/jellyfish/apps/livechat
 
