Stop copying env.sh to public html dir
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/ui/Dockerfile
+++ b/apps/ui/Dockerfile
@@ -34,11 +34,11 @@ RUN make build-ui \
 FROM nginx:1.21.3
 WORKDIR /usr/share/nginx/html
 COPY --from=base /usr/src/jellyfish/apps/ui/dist/ui /usr/share/nginx/html
-COPY apps/ui/conf/env.sh /usr/share/nginx/html
+COPY apps/ui/conf/env.sh /tmp
 COPY apps/ui/conf/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Make our shell script executable
-RUN chmod +x /usr/share/nginx/html/env.sh
+RUN chmod +x /tmp/env.sh
 
 # Start Nginx server
-CMD ["/bin/bash", "-c", "/usr/share/nginx/html/env.sh && nginx -g \"daemon off;\""]
+CMD ["/bin/bash", "-c", "/tmp/env.sh && nginx -g \"daemon off;\""]
