Fix `dev-ui` command to work locally
Recent changes for cache busting prevented the `dev-ui` command from
working on your local machine. This change fixes this by only applying
the cachebusting suffix to the filename if the current node environment
isn't "development".

Change-type: patch
Signed-off-by: Lucian Buzzo <lucian.buzzo@gmail.com>

--- a/apps/ui/Makefile
+++ b/apps/ui/Makefile
@@ -39,10 +39,11 @@ test:
 
 .PHONY: dev-ui
 dev-ui:
+	mkdir -p ./dist/ui && \
 	SERVER_HOST=$(SERVER_HOST) SERVER_PORT=$(SERVER_PORT) \
+	PUBLIC_DIR="./" \
 	NODE_ENV=development \
 	NODE_OPTIONS=--max-old-space-size=8192 \
-	mkdir -p ./dist/ui && \
 	./conf/env.sh && \
 	cp ./env-config.js ./dist/ui/ && \
 	./node_modules/.bin/webpack serve \
