--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -20,7 +20,7 @@
   "author": "Balena.io. <hello@balena.io>",
   "license": "UNLICENSED",
   "dependencies": {
-    "@balena/jellyfish-chat-widget": "^12.4.20",
+    "@balena/jellyfish-chat-widget": "^12.5.0-sync-stream-f7b80f14c63c1460bad2c2852e76b03efc16fc67",
     "@balena/jellyfish-client-sdk": "^7.0.0",
     "@balena/jellyfish-environment": "^5.0.11",
     "@balena/jellyfish-ui-components": "^12.0.25",
