--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@balena/jellyfish-action-library": "^15.1.112",
-    "@balena/jellyfish-chat-widget": "^12.4.20",
+    "@balena/jellyfish-chat-widget": "^12.5.0-sync-stream-f7b80f14c63c1460bad2c2852e76b03efc16fc67",
     "@balena/jellyfish-client-sdk": "^7.0.0",
     "@balena/jellyfish-config": "^1.5.6",
     "@balena/jellyfish-core": "^7.0.26",
