Katapult: Standardize the labels used for the K8s resources.
This is to make sure that the labels used for the resources
follow a standard format.  This also adds necessary labels
for the namespace resource to make sure that ALB ingress
controller detects the new pods and injects the needed
readiness gates.

Change-type: patch
Signed-off-by: Carlo Miguel F. Cruz <carloc@balena.io>

--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/01_namespace.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/01_namespace.tpl.yml
@@ -2,3 +2,6 @@ kind: Namespace
 apiVersion: v1
 metadata:
   name: '{{{KATAPULT_KUBE_NAMESPACE}}}'
+  labels:
+    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
+    kustomize.toolkit.fluxcd.io/prune: disabled
