--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@balena/jellyfish-chat-widget": "^12.5.3",
     "@balena/jellyfish-client-sdk": "^7.0.0",
     "@balena/jellyfish-config": "^1.5.6",
-    "@balena/jellyfish-core": "^7.0.26",
+    "@balena/jellyfish-core": "8.0.0-joshbwlng-index-locks-9fb7b9e5d3a262746604a9214d51676773fa3737",
     "@balena/jellyfish-environment": "^5.0.11",
     "@balena/jellyfish-plugin-balena-api": "^1.0.121",
     "@balena/jellyfish-plugin-base": "^2.1.259",
