--- a/apps/action-server/package.json
+++ b/apps/action-server/package.json
@@ -36,7 +36,7 @@
     "@balena/jellyfish-plugin-outreach": "^1.0.232",
     "@balena/jellyfish-plugin-product-os": "^2.7.57",
     "@balena/jellyfish-plugin-typeform": "^3.0.338",
-    "@balena/jellyfish-queue": "^1.0.312",
+    "@balena/jellyfish-queue": "1.0.313-joshbwlng-add-graphile-retry-ce2e12f971382de096cc9a5570dc92eaf578d641",
     "@balena/jellyfish-sync": "^6.1.48",
     "@balena/jellyfish-worker": "^10.0.72",
     "bluebird": "^3.7.2",
