--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-configmap.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-configmap.tpl.yml
@@ -12,6 +12,7 @@ data:
   TEST_USER_USERNAME: "jellyfish"
   TEST_USER_ROLE: "user-community"
   UV_THREADPOOL_SIZE: "128"
+  QUEUE_CONCURRENCY: "4"
 kind: ConfigMap
 metadata:
   labels:
