Katapult: Add deployment anti-affinity rules.
Also updates the deployment labels.  The anti-affinity rules
prefers spreading of the pods across the kubernetes nodes.

Change-type: patch
Signed-off-by: Carlo Miguel F. Cruz <carloc@balena.io>

--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-service.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-service.tpl.yml
@@ -7,7 +7,8 @@ metadata:
   name: jellyfish-api
 spec:
   selector:
-    app: jellyfish
+    app.kubernetes.io/instance: jellyfish-api
+    app.kubernetes.io/name: jellyfish-api
   ports:
   - port: 8000
   sessionAffinity: ClientIP
