--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-service.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-service.tpl.yml
@@ -7,8 +7,7 @@ metadata:
   name: jellyfish-api
 spec:
   selector:
-    app.kubernetes.io/instance: jellyfish-api
-    app.kubernetes.io/name: jellyfish-api
+    app: jellyfish
   ports:
   - port: 8000
   sessionAffinity: ClientIP
