--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -6,8 +6,6 @@ COPY . ./
 # Delete image archives created during CI build stage
 RUN rm -f balena-jellyfish-*.tar
 
-ARG NPM_TOKEN
-RUN echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc && \
-	PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true make npm-install
+RUN PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true make npm-install
 
 CMD /bin/bash -c "if [ "$CI" ]; then task test; else trap : TERM INT; sleep infinity; fi"
