Katapult: Fixup deployment template.
Change-type: patch
Signed-off-by: Carlo Miguel F. Cruz <carloc@balena.io>

--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-deployment.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-deployment.tpl.yml
@@ -28,7 +28,7 @@ spec:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 100
             podAntiAffinityTerm:
-              labelSelector:
+              preference:
                 matchExpressions:
                 - key: app.kubernetes.io/instance
                   operator: In
