Katapult: Add pod anti-affinity rules for livechat & UI.
Change-type: patch
Signed-off-by: Carlo Miguel F. Cruz <carloc@balena.io>

--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-livechat-configmap.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-livechat-configmap.tpl.yml
@@ -8,5 +8,8 @@ data:
   SERVER_PORT: "443"
 kind: ConfigMap
 metadata:
+  labels:
+    app.kubernetes.io/instance: jellyfish-livechat
+    app.kubernetes.io/name: jellyfish-livechat
   name: jellyfish-livechat
   namespace: '{{{KATAPULT_KUBE_NAMESPACE}}}'
