--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-livechat-service.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-livechat-service.tpl.yml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    name: jellyfish-livechat
+    app.kubernetes.io/instance: jellyfish-livechat
+    app.kubernetes.io/name: jellyfish-livechat
   namespace: '{{{KATAPULT_KUBE_NAMESPACE}}}'
   name: jellyfish-livechat
 spec:
   selector:
-    app: jellyfish-livechat
+    app.kubernetes.io/instance: jellyfish-livechat
+    app.kubernetes.io/name: jellyfish-livechat
   ports:
   - port: 80
   sessionAffinity: ClientIP
