--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-ui-configmap.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-ui-configmap.tpl.yml
@@ -9,5 +9,8 @@ data:
   SERVER_PORT: "443"
 kind: ConfigMap
 metadata:
+  labels:
+    app.kubernetes.io/instance: jellyfish-ui
+    app.kubernetes.io/name: jellyfish-ui
   name: jellyfish-ui
   namespace: '{{{KATAPULT_KUBE_NAMESPACE}}}'
