--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-ui-service.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-ui-service.tpl.yml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    name: jellyfish-ui
+    app.kubernetes.io/instance: jellyfish-ui
+    app.kubernetes.io/name: jellyfish-ui
   namespace: '{{{KATAPULT_KUBE_NAMESPACE}}}'
   name: jellyfish-ui
 spec:
   selector:
-    app: jellyfish-ui
+    app.kubernetes.io/instance: jellyfish-ui
+    app.kubernetes.io/name: jellyfish-ui
   ports:
   - port: 80
   sessionAffinity: ClientIP
