--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -10,4 +10,4 @@ ARG NPM_TOKEN
 RUN echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc && \
 	PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true make npm-install
 
-CMD /bin/bash -c "if [ "$CI" ]; then task test; else trap : TERM INT; sleep infinity; fi"
+CMD /bin/bash -c "env; if [ "$CI" ]; then task test; else trap : TERM INT; sleep infinity; fi"
