Katapult: Fixup anti-affinity configuration.
Change-type: patch
Signed-off-by: Carlo Miguel F. Cruz <carloc@balena.io>

--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-deployment.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-deployment.tpl.yml
@@ -26,19 +26,19 @@ spec:
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAntiAffinityTerm:
-              preference:
-                matchExpressions:
-                - key: app.kubernetes.io/instance
-                  operator: In
-                  values:
-                  - jellyfish-api
-                - key: app.kubernetes.io/name
-                  operator: In
-                  values:
-                  - jellyfish-api
-              topologyKey: kubernetes.io/hostname
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app.kubernetes.io/instance
+                      operator: In
+                      values:
+                        - jellyfish-api
+                    - key: app.kubernetes.io/name
+                      operator: In
+                      values:
+                        - jellyfish-api
+                topologyKey: kubernetes.io/hostname
       terminationGracePeriodSeconds: 120
       containers:
       - image: <<%&children.sw.containerized-application.jellyfish-api.data.assets.image.url%>>
