--- a/apps/action-server/package.json
+++ b/apps/action-server/package.json
@@ -8,7 +8,7 @@
     "node": ">=14.2.0"
   },
   "author": "Balena.io. <hello@balena.io>",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0",
   "scripts": {
     "clean": "rimraf build",
     "build": "npm run clean && tsc -p tsconfig.build.json",
