--- a/apps/oauth-provider-example/package.json
+++ b/apps/oauth-provider-example/package.json
@@ -8,7 +8,7 @@
     "node": ">=14.2.0"
   },
   "author": "Balena.io. <hello@balena.io>",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
