--- a/deploy-templates/cloudformation/jellyfish-db.yml
+++ b/deploy-templates/cloudformation/jellyfish-db.yml
@@ -47,6 +47,7 @@ Parameters:
     - db.r6g.xlarge
     - db.r6g.2xlarge
     - db.r6g.4xlarge
+    - db.r6g.8xlarge
     - db.r6g.12xlarge
     - db.r6g.16xlarge
     - db.x1e.xlarge
@@ -158,7 +159,7 @@ Mappings:
     postgres11:
       EngineVersion: 11.6
     postgres12:
-      EngineVersion: 12.5
+      EngineVersion: 12.7
 
 
 Resources:
