Update secret paths in gitignore
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.gitignore
+++ b/.gitignore
@@ -107,24 +107,31 @@ custom.env
 docs/typedoc/*
 
 # Decrypted secret files
-.balena/secrets/npmrc.txt
-.balena/secrets/npm_token.txt
-.balena/secrets/integration_typeform_signature_key.txt
-.balena/secrets/integration_balena_api_private_key.txt
-.balena/secrets/integration_balena_api_public_key_production.txt
-.balena/secrets/integration_outreach_app_id.txt
-.balena/secrets/integration_outreach_app_secret.txt
-.balena/secrets/integration_outreach_signature_key.txt
-.balena/secrets/integration_flowdock_signature_key.txt
-.balena/secrets/integration_flowdock_token.txt
-.balena/secrets/integration_github_app_id.txt
-.balena/secrets/integration_github_private_key.txt
-.balena/secrets/integration_github_signature_key.txt
-.balena/secrets/integration_github_token.txt
-.balena/secrets/integration_front_token.txt
-.balena/secrets/integration_intercom_token.txt
-.balena/secrets/integration_discourse_signature_key.txt
-.balena/secrets/integration_discourse_token.txt
-.balena/secrets/integration_discourse_username.txt
-.balena/secrets/integration_google_meet_credentials.txt
-.balena/secrets/mailgun_token.txt
+.balena/secrets/integration_typeform_signature_key
+.balena/secrets/integration_balena_api_private_key
+.balena/secrets/integration_balena_api_public_key_production
+.balena/secrets/integration_outreach_app_id
+.balena/secrets/integration_outreach_app_secret
+.balena/secrets/integration_outreach_signature_key
+.balena/secrets/integration_flowdock_signature_key
+.balena/secrets/integration_flowdock_token
+.balena/secrets/integration_github_app_id
+.balena/secrets/integration_github_private_key
+.balena/secrets/integration_github_signature_key
+.balena/secrets/integration_github_token
+.balena/secrets/integration_front_token
+.balena/secrets/integration_intercom_token
+.balena/secrets/integration_discourse_signature_key
+.balena/secrets/integration_discourse_token
+.balena/secrets/integration_discourse_username
+.balena/secrets/integration_google_meet_credentials
+.balena/secrets/mailgun_token
+.balena/secrets/reset_password_secret_token
+.balena/secrets/integration_balena_api_public_key_staging
+.balena/secrets/registry_token_auth_cert_key
+.balena/secrets/registry_token_auth_cert_kid
+.balena/secrets/aws_access_key_id
+.balena/secrets/aws_s3_bucket_name
+.balena/secrets/aws_secret_access_key
+.balena/secrets/integration_balena_api_app_id
+.balena/secrets/integration_balena_api_app_secret
