--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,10 +13,10 @@
     "clean": "rimraf build",
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "lint": "balena-lint lib test && depcheck --ignore-bin-package --ignores=depcheck,@types/jest,nodemon,typedoc",
-    "lint-fix": "balena-lint --fix lib test",
-    "unit": "jest ./test/unit/.*.spec.ts$",
-    "integration": "jest --runInBand --testTimeout=120000 --forceExit ./test/integration/.*.spec.ts$",
-    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run unit && npm run integration",
+    "lint:fix": "balena-lint --fix lib test",
+    "test:unit": "jest ./test/unit/.*.spec.ts$",
+    "test:integration": "jest --runInBand --testTimeout=120000 --forceExit ./test/integration/.*.spec.ts$",
+    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:unit && npm run test:integration",
     "doc": "typedoc lib/",
     "prepack": "npm run build"
   },
