--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -44,7 +44,6 @@
     "file-saver": "^2.0.5",
     "flat": "^5.0.2",
     "howler": "^2.2.3",
-    "html-webpack-plugin": "^4.5.2",
     "immutability-helper": "^3.1.1",
     "is-uuid": "^1.0.2",
     "json-e": "^4.4.3",
@@ -76,9 +75,7 @@
     "skhema": "^5.3.4",
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.3",
-    "uuid": "^8.3.2",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -104,17 +101,21 @@
     "esbuild-loader": "^2.16.0",
     "eslint": "^7.32.0",
     "grommet": "^2.19.1",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-esm-transformer": "^1.0.0",
     "json-schema": "^0.4.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "redux-mock-store": "^1.5.4",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
     "ts-jest": "^26.5.6",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^3.11.3",
+    "webpack-dev-server": "^4.6.0",
     "workbox-core": "^6.4.2",
     "workbox-precaching": "^6.4.2",
     "workbox-routing": "^6.4.2",
