Enable failFast in ava options
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "verbose": true,
     "serial": true,
     "failWithoutAssertions": true,
+    "failFast": true,
     "files": [
       "test/**/*.spec.js"
     ]
