Remove OAuth redirect ENV from Dockerfile
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-configmap.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-api-configmap.tpl.yml
@@ -13,6 +13,7 @@ data:
   TEST_USER_ROLE: "user-community"
   UV_THREADPOOL_SIZE: "128"
   QUEUE_CONCURRENCY: "4"
+  OAUTH_REDIRECT_BASE_URL: "https://jel.ly.fish"
 kind: ConfigMap
 metadata:
   labels:
